comleted lev distance pipeline with documentation

--- a/levenshtein_distance/lev_dist.ipynb
+++ b/levenshtein_distance/lev_dist.ipynb
@@ -126,6 +126,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6303c885-b03d-493e-9ba0-bc979b018593",
+   "metadata": {},
+   "source": [
+    "For the purpose of comparing the user input article to another article, we will reference Wikipedia. You are able to fetch Wikipedia text data very easily through the Wikipedia library. You can run the following command on your console :   \n",
+    "```pip3 install wikipedia```  \n",
+    "or reference the installation documentation for this library [here](https://pypi.org/project/Wikipedia-API/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a665cad9-5979-4695-b2c5-2fbcf8a5e0df",
    "metadata": {},
    "source": [
@@ -134,14 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "4ccbc07b-eff4-496e-bb2c-5d4c64044832",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "import numpy as np\n",
-    "import Levenshtein as lev"
+    "import string\n",
+    "import Levenshtein as lev\n",
+    "import wikipedia\n",
+    "\n",
+    "from nltk.corpus import stopwords"
    ]
   },
   {
@@ -153,7 +165,7 @@
     "Similar to softwares like Turnitin, we want to build a pipeline which identifies if an input article is plagiarized.   \n",
     "\n",
     "### Solution Architecture\n",
-    "To solve this problem we're going to make a large initial assumption. The assumption is that we have a large corpus of labelled documents which we want to cross reference with this particular user input document. We can then clean the user input document for redundancies like stopwords and punctuations to better optimize the calculation of Levenshtein distance. We pass this cleaned document through each document in our corpus under the same tag as the user input document and identify if there is any document which is very similar to the user submitted document.   "
+    "To solve this problem a few things will be required. Firstly, we need to get the information passed on by the user of the pipeline, for this we not only require the article that they want to check the plagiarism against but also a keyword tag which corresponds to that article. For the simplicity of this tutorial, we'll used the initial text I've written for this article with the tag being `Levenshtein Distance`. Second, we need a large corpus of documents we want to compare the user input text with. We can leverage the Wikipedia-API to get access to Wikipedia articles associated to the tag of the user input data.  We can then clean the user input document for redundancies like stopwords and punctuations to better optimize the calculation of Levenshtein distance. We pass this cleaned document through each document in our corpus under the same tag as the user input document and identify if there is any document which is very similar to the user submitted document.   "
    ]
   },
   {
@@ -166,19 +178,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "547ade18-9f22-47e9-8df9-702f9b5ba7db",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "user_article = '''\n",
+    "Identifying similarity between text is a common problem in NLP and is used by many companies world wide. The most common application of text similarity comes from the form of identifying plagiarized text. Educational facilities ranging from elementary school, high school, college and universities all around the world use services like Turnitin to ensure the work submitted by students is original and their own. Other applications of text similarity is commonly used by companies which have a similar structure to Stack Overflow or Stack Exchange. They want to be able to identify and flag duplicated questions so the user posting the question can be referenced to the original post with the solution. This increases the number of unique questions being asked on their platform. \n",
+    "Text similarity can be broken down into two components, semantic similarity and lexical similarity. Given a pair of text, the semantic similarity of the pair refers to how close the documents are in meaning. Whereas, lexical similarity is a measure of overlap in vocabulary. If both documents in the pairs have the same vocabularies, then they would have a lexical similarity of 1 and vice versa of 0 if there was no overlap in vocabularies [2].\n",
+    "Achieving true semantic similarity is a very difficult and unsolved task in both NLP and Mathematics. It's a heavily researched area and a lot of the solutions proposed does involve a certain degree of lexical similarity in them. For the focuses of this article, I will not dive much deeper into semantic similarity, but focus a lot more on lexical similarity.\n",
+    "Levenshtein Distance\n",
+    "There are many ways to identify the lexical similarities between a pair of text, the one which we'll be covering today in this article is Levenshtein distance. An algorithm invented in 1965 by Vladimir Levenshtein, a Soviet mathematician [1].\n",
+    "Intuition\n",
+    "Levenshtein distance is very impactful because it does not require two strings to be of equal length for them to be compared. Intuitively speaking, Levenshtein distance is quite easy to understand.\n",
+    "Informally, the Levenshtein distance between two words is the minimum number of single-character edits (insertions, deletions or substitutions) required to change one word into the other. [1]\n",
+    "- https://en.wikipedia.org/wiki/Levenshtein_distance\n",
+    "Essentially implying that the output distance between the two is the cumulative sum of the single-character edits. The larger the output distance is implies that more changes were necessary to make the two words equal each other, and the lower the output distance is implies that fewer changes were necessary. For example, given a pair of words dream and dream the resulting Levenshtein distance would be 0 because the two words are the same. However, if the words were dream and steam the Levenshtein distance would be 2 as you would need to make 2 edits to change dr to st .\n",
+    "Thus a large value for Levenshtein distance implies that the two documents were not similar, and a small value for the distance implies that the two documents were similar.\n",
+    "'''\n",
+    "\n",
+    "tags = ['Levenshtein distance']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "eaafcfcf-e198-41b1-8da0-beea126af6b2",
+   "execution_count": 6,
+   "id": "b0aa7c51-c2d5-4704-942b-9dad1b1a54d2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def fetch_wiki_data(tags):\n",
+    "    '''\n",
+    "    The purpose of this function is to get the wikipedia data associated to a certain user\n",
+    "    input tag.\n",
+    "    \n",
+    "    params:\n",
+    "        tag (String) : The item you want to seach wikipedia for\n",
+    "        \n",
+    "    returns:\n",
+    "        This function will return the contents associated to the user specified tag\n",
+    "    \n",
+    "    example:\n",
+    "        tag = 'Levenshtein distance'\n",
+    "        fetch_wiki_data(tag)\n",
+    "        >> In information theory, linguistics, and computer science, the Levenshtein distance \n",
+    "           is a string metric...\n",
+    "    '''\n",
+    "    content = {}\n",
+    "    for tag in tags:\n",
+    "        # get wikipedia data for the tag\n",
+    "        wiki_tag = wikipedia.search(tag)\n",
+    "\n",
+    "        # get page info\n",
+    "        page = wikipedia.page(wiki_tag[0])\n",
+    "\n",
+    "        # get page content\n",
+    "        content[tag] = page.content\n",
+    "    return content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "31a7d2d1-21c8-49c0-afcf-f2578ef59c76",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 201 ms, sys: 44.5 ms, total: 245 ms\n",
+      "Wall time: 3.76 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time tag_content = fetch_wiki_data(tags)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -190,19 +266,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c04bbe3d-fa41-4b8a-819c-c345f4801108",
+   "execution_count": 12,
+   "id": "4d1da5ad-2745-4170-bed5-7be08590887f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def remove_punctuations(txt, punct = string.punctuation):\n",
+    "    '''\n",
+    "    This function will remove punctuations from the input text\n",
+    "    '''\n",
+    "    return ''.join([c for c in txt if c not in punct])\n",
+    "  \n",
+    "def remove_stopwords(txt, sw = list(stopwords.words('english'))):\n",
+    "    '''\n",
+    "    This function will remove the stopwords from the input txt\n",
+    "    '''\n",
+    "    return ' '.join([w for w in txt.split() if w.lower() not in sw])\n",
+    "\n",
+    "def clean_text(txt):\n",
+    "    '''\n",
+    "    This function will clean the text being passed by removing specific line feed characters\n",
+    "    like '\\n', '\\r', and '\\'\n",
+    "    '''\n",
+    "    \n",
+    "    txt = txt.replace('\\n', ' ').replace('\\r', ' ').replace('\\'', '')\n",
+    "    txt = remove_punctuations(txt)\n",
+    "    txt = remove_stopwords(txt)\n",
+    "    return txt.lower()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c606f2d9-2b5f-4a3d-b77b-6a97db153c08",
+   "execution_count": 13,
+   "id": "54352deb-9bef-4038-a211-2181c3650a8e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4.93 ms, sys: 514 µs, total: 5.44 ms\n",
+      "Wall time: 6.59 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time user_article = clean_text(user_article) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "581f4ee8-2aee-4fc7-a063-f96a42637616",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 8.31 ms, sys: 1.5 ms, total: 9.8 ms\n",
+      "Wall time: 9.96 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for tag, content in tag_content.items():\n",
+    "    tag_content[tag] = clean_text(content)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -214,19 +345,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b3ea3ff6-e4d5-41b3-a5f8-c1463d30d13c",
+   "execution_count": 24,
+   "id": "86f7dd58-6e51-43b9-aaa8-c1bf2833ba24",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def similarity(user_article, tag_content):\n",
+    "    '''\n",
+    "    This function will identify the similarities between the user_article and all the\n",
+    "    content within tag_content\n",
+    "    \n",
+    "    params:\n",
+    "        user_article (String) : The text submitted by the user\n",
+    "        tag_content (Dictionary) : Key is the tag and the value is the content you want \n",
+    "                                   to compare with the user_article\n",
+    "    \n",
+    "    returns:\n",
+    "        This function will return a dictionary holding the Levenshtein assocaited to the \n",
+    "        user_article with each tag_content\n",
+    "    '''\n",
+    "    \n",
+    "    distances = {}\n",
+    "    for tag,content in tag_content.items():\n",
+    "        dist = lev.distance(user_article, content)\n",
+    "        distances[tag] = dist\n",
+    "    return distances"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fd3f944c-6162-4096-9a3f-126ad73c1eef",
+   "execution_count": 28,
+   "id": "b3ea3ff6-e4d5-41b3-a5f8-c1463d30d13c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Levenshtein distance': 4936}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distances = similarity(user_article, tag_content)\n",
+    "distances"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "520bd164-9e47-47cb-9c54-ecfadd9c95dd",
+   "metadata": {},
+   "source": [
+    "Now this value might seem relatively arbitrary to you, its hard to determine if this value reflects that the content is plagiarized or not. The larger the value is the less likely it is to be considered plagiarized based on our understanding of Levenshtein distance. However its difficult to determine that threshold of what distance is not large enough. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "120f8bd8-2343-4afe-9371-5cc5927f7771",
+   "metadata": {},
+   "source": [
+    "## Check Plagiarism"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "b9db0166-e796-43ee-b738-257b4a42f27c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def is_plagiarism(user_article, tag_content, distances, th = 0.4):\n",
+    "    '''\n",
+    "    This function will identify if the user_article is considered plagiarized for each\n",
+    "    of the tag_content based on the distances observed.\n",
+    "    \n",
+    "    params:\n",
+    "        user_article (String) : The text submitted by the user\n",
+    "        tag_content (Dictionary) : Key is the tag and the value is the content you want \n",
+    "                                   to compare with the user_article\n",
+    "        distances (Dictionary) : Key is the tag and the value is the Levenshtein distance \n",
+    "        th (Float) : The plagiarism threshold\n",
+    "    \n",
+    "    returns:\n",
+    "        A dictionary associated to the plagiarism percentage for each tag\n",
+    "    '''\n",
+    "    ua_len = len(user_article)\n",
+    "    distances = {tag:[d, max(ua_len, len(tag_content[tag]))] for tag,d in distances.items()}\n",
+    "    \n",
+    "    for tag, d in distances.items():\n",
+    "        if d[0] <= d[1] * th:\n",
+    "            distances[tag] = 'Plagiarized'\n",
+    "        else:\n",
+    "            distances[tag] = 'Not Plagiarized'\n",
+    "    return distances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "5bc87b03-9ede-4235-a4ed-c5d7c531ca80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Levenshtein distance': 'Not Plagiarized'}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_plagiarism(user_article, tag_content, distances)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af16d2d6-179e-47ce-b42d-e6e01c2dd808",
+   "metadata": {},
+   "source": [
+    "## Caveats\n",
+    "There are a number of caveats to using the pipeline outlined above. \n",
+    "1) This pipeline does not identify which areas are plagiarized and which areas are not, it only yields an overall score of plagiarism.\n",
+    "2) The process does not account of properly cited and quoted pieces of text. This would misleadingly increase the overall plagiarism score.\n",
+    "3) It's difficult to determine a threshold of what how small or large a distance should be to be considered plagiarized."
+   ]
   },
   {
    "cell_type": "markdown",
