added documentation and breakdown

--- a/active_learning/active.ipynb
+++ b/active_learning/active.ipynb
@@ -1,6 +1,292 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "256d845c-9397-4d6f-92e4-18fef599770c",
+   "metadata": {},
+   "source": [
+    "# Active Learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c7f7903b-7bbe-41b6-a21b-e73ede0ab03d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ea70091-b594-4480-bb32-5b48dab2b9f9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "951c5f0e-e677-476a-ab59-efd7bafe9a97",
+   "metadata": {},
+   "source": [
+    "## Load Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6428589d-7938-4efd-86b7-72d3d20bb0b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "065c30ec-3803-463d-befe-61c453c0f674",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f15786b-0b9b-4ff9-bd22-44824342a02f",
+   "metadata": {},
+   "source": [
+    "## Annotate Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee4ae5d8-5982-451c-953f-b7372b998076",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67bf3939-3aee-4b74-8f6a-c865b91a4078",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db92866c-d2b9-487e-a041-621a35471013",
+   "metadata": {},
+   "source": [
+    "## Train Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e3920e1-cca0-4286-a218-5a0af3617311",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50dc33b3-e2a6-458a-9834-bbb3129bf639",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faed10e0-82df-4d0e-be2c-16a55ededf02",
+   "metadata": {},
+   "source": [
+    "## Model Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c7e0ecc-8d0f-462b-8ac5-18998cc3bfb8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cac081a6-2346-400f-ab52-2dadd9736f49",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b4a38be-e8f2-4c76-a4e6-5ec4b2cd1fd4",
+   "metadata": {},
+   "source": [
+    "## Get Low Predictions to Annotate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b15d2e12-b94e-47b9-8546-b6df6a55ab9f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "993a780f-cbd5-4e74-877f-fcb4343385f1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62389a18-602a-4f00-9929-189d41bfe7ad",
+   "metadata": {},
+   "source": [
+    "## Get High Predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8ba008a-6fd3-4ee8-a76e-2ec29ca8b82e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80e9f577-c67c-4b44-a010-28e9ca3aa38e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da3927f9-97ee-4837-89e1-2a0fdeabfb8b",
+   "metadata": {},
+   "source": [
+    "## Update Labelled Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c6f6f00-9602-40f3-861b-4f4aa20f8742",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59425c45-39fd-4e38-87d4-014168602375",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f5e3d88-0337-4253-860d-928560352953",
+   "metadata": {},
+   "source": [
+    "## Retrain Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b094a913-408f-4fbf-a983-6ac11346a8fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc35ba3a-0806-4ddf-b64e-1ade3c4e884c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2c2cf05-744c-495e-a049-daf06bdcdc10",
+   "metadata": {},
+   "source": [
+    "## Model Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecda2526-0db6-48e3-9a6b-0b520925c19a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a892913e-4476-413a-bf29-7aa448416ec9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c31b3819-66a8-4579-893d-69a10829458a",
+   "metadata": {},
+   "source": [
+    "## Concluding Remarks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdf0983e-e65b-4402-aaf3-23f3739b8dc9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "183fc07d-afeb-48bc-9d0d-1eebfba87d05",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
